[metadata]
name = oura-contraindications
version = 1.4.3
author = smonk333
author_email = smonk3.the.folf@gmail.com
description = Oura API client for contraindications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smonk333/python-ouraring
project_urls =
    Bug Tracker = https://github.com/smonk333/python-ouraring/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests-oauthlib
    pandas

[options.packages.find]
exclude = tests
